syntax = "proto3";

package data;

option go_package = "data/";

service MessageService {
  rpc SendMessage (MyMessage) returns (MyMessage) {}
  rpc GetMessage (Empty) returns (MyMessage) {}
}

message MyMessage {
  string message = 1;
}

message Empty {
}